# devsecops-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  decsecops_notes.txt  devsecops_notes.txt  docker-compose.yml  important.txt  need_to_be_done.txt  notes.txt  notest.txt  pyproject.toml
.github/workflows/: security.yml
.pre-commit-cache/: db.db
.zap/: rules.tsv
app/: db.py  main.py
db/: init.sql
